remove colon from why_us.features.title

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -92,27 +92,27 @@
             "subheadline": "Unlock your business's potential with standout design, flawless print, and the workplace essentials to keep your team producing at its best.",
             "features": [
                 {
-                    "title": "Quality you can see :",
+                    "title": "Quality you can see",
                     "description": "Calibrated color, premium materials, and rigorous checks on every job."
                 },
                 {
-                    "title": "Speed without shortcuts :",
+                    "title": "Speed without shortcuts",
                     "description": "Reliable turnarounds and on-time delivery you can plan around."
                 },
                 {
-                    "title": "Results-first mindset :",
+                    "title": "Results-first mindset",
                     "description": "We start with your objectives, target your audience, and design to convert."
                 },
                 {
-                    "title": "All-in-one partner :",
+                    "title": "All-in-one partner",
                     "description": "Print solutions plus printing supplies, Office Furniture & Accessories, and Tech & Accessories—one trusted partner."
                 },
                 {
-                    "title": "Design that connects :",
+                    "title": "Design that connects",
                     "description": "Strong, inspiring visuals that deliver your message clearly."
                 },
                 {
-                    "title": "Transparent pricing & proofs :",
+                    "title": "Transparent pricing & proofs",
                     "description": "No surprises—clear quotes, pre-print proofs, and proactive updates."
                 }
             ]
