--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -92,27 +92,27 @@
             "subheadline": "Libérez le potentiel de votre entreprise avec un design marquant, une impression impeccable et les essentiels de bureau pour maintenir votre équipe à son meilleur niveau.",
             "features": [
                 {
-                    "title": "Qualité visible :",
+                    "title": "Qualité visible",
                     "description": "Couleurs calibrées, matériaux premium et contrôles rigoureux sur chaque travail."
                 },
                 {
-                    "title": "Rapidité sans compromis :",
+                    "title": "Rapidité sans compromis",
                     "description": "Délais fiables et livraison ponctuelle."
                 },
                 {
-                    "title": "Une approche axée résultats :",
+                    "title": "Une approche axée résultats",
                     "description": "Nous commençons par vos objectifs, ciblons votre audience et concevons pour convertir."
                 },
                 {
-                    "title": "Partenaire tout-en-un :",
+                    "title": "Partenaire tout-en-un",
                     "description": "Solutions d’impression + fournitures, mobilier de bureau et accessoires tech — un partenaire de confiance."
                 },
                 {
-                    "title": "Un design qui connecte :",
+                    "title": "Un design qui connecte",
                     "description": "Des visuels forts et inspirants qui livrent votre message clairement."
                 },
                 {
-                    "title": "Prix et épreuves transparents :",
+                    "title": "Prix et épreuves transparents",
                     "description": "Pas de surprises — devis clairs, épreuves avant impression et mises à jour proactives."
                 }
             ]
