--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -1,4 +1,5 @@
 {
+    "language_label": "العربية",
     "products": "المنتجات",
     "custom_order": "طلب مخصص",
     "order_via_whatsapp": "اطلب عبر واتساب",
