--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,4 +1,5 @@
 {
+    "language_label": "English",
     "products": "Products",
     "custom_order": "Custom Order",
     "order_via_whatsapp": "Order via WhatsApp",
