--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -1,4 +1,5 @@
 {
+    "language_label": "Français",
     "products": "Produits",
     "custom_order": "Commande personnalisée",
     "order_via_whatsapp": "Commander via WhatsApp",
