style hero section

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -69,7 +69,7 @@
     },
     "home": {
         "hero_section": {
-            "discover_whats_in_store": "اكتشف \nما \nفي \nالمتجر",
+            "discover_whats_in_store": "اكتشف \nما في \nالمتجر",
             "start_your_custom_order": "ابدأ \nطلبك \nالمخصص",
             "scroll_down": "مرر للأسفل",
             "to_know_more_about_us": "لتعرف المزيد عنا"
