--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -12,7 +12,8 @@
         "next": "التالي"
     },
     "products_list": {
-        "see_options": "عرض الخيارات"
+        "see_options": "عرض الخيارات",
+        "price_starting_from": "ابتداءً من"
     },
     "no_products_found": "لم يتم العثور على منتجات",
     "tags_search": {
